<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_list"
        android:icon="@drawable/ic_list"
        android:title="@string/list" />
    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/ic_map"
        android:title="@string/map" />
    <item
        android:id="@+id/nav_fav"
        android:icon="@drawable/ic_fav_filled"
        android:title="@string/favorites" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
</menu>
